--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,7 @@ data:
 settings:
   team-selection: true
   stop-entity-spawn: true
+  enable-default-kits: true
   maps:
     default:
       min-per-team: 6
